# visits

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
docker/: Dockerfile  wsgi-entrypoint.sh
store/: admin.py  models.py
store/api/: auth.py  fields.py  router.py  serializers.py  views.py
store/api/tests/: test_serializer.py  test_views.py
store/management/commands/: defaultuser_create.py
store/migrations/: 0001_initial.py
visits/: asgi.py  settings.py  urls.py  wsgi.py
